tests/interpreter/pass/101-division.hyg
assert(20 / 5 = 4);
assert(6 / 2 = 3);
assert(2.0f = 2.4f / 1.2f)
