tests/interpreter/fail/103-sqrt.hyg
assert(sqrt(25.0f) = 2)